# Reko

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm  README.md  bot.py  data.json  index.html  latencyr.py  main.py  pyproject.toml  requirements.txt  test.py  testrandom.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-image-commit.yml  publishtodocker.yml
Website/static/css/: main.css
docs/features/: rekolink.md  serverpanel.md
extensions/: datacommands.py  dc.py  static.py  tasks.py
routes/: utils.py
secrets/: token
src/: bot.py  utilities.py
src/extensions/: custom.py  dc.py  general.py  static.py  tasks.py
templates/: index.html
test/: chart.py
