[tool.poetry]
name = "Reko"
version = "0.4.4-beta"
description = "https://github.com/TechnoTalksDev/Reko"
homepage = "https://reko.technotalks.net"
authors = ["TechnoTalksDev <technotalksyt101@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
psutil = "^5.9.0"
python-dotenv = "^0.20.0"
requests = "^2.31.0"
geocoder = "^1.38.1"
mcstatus = "^9.0.4"
staticmap = "^0.5.5"
motor = "^3.0.0"
py-cord = "2.4.1"
coloredlogs = "^15.0.1"
matplotlib = "^3.6.2"
websockets = "^11.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
runbot = "python:main.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"